[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain-anthropic>=0.3.16",
    "langchain-core>=0.3.67",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "langgraph-checkpoint>=2.1.0",
    "openai>=1.93.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "streamlit>=1.46.1",
]
